# pyspring-admin

./: .gitignore  README.md  app-config.json  application-properties.json  docker-compose.yaml  dockerfile  main.py  main.spec  pyproject.toml  requirements.txt
py_spring_admin/: __init__.py  py_spring_admin.py
py_spring_admin/core/: py_spring_admin.py  py_spring_admin_provider.py
py_spring_admin/core/controller/: admin_main_controller.py  admin_site_static_file_controller.py  auth_controller.py  build_utils.py  commons.py  depends_utils.py  model_controller.py
py_spring_admin/core/controller/middleware/: auth_middleware.py  exception_middleware.py  middleware_base.py
py_spring_admin/core/repository/: commons.py  models.py  user_repository.py  user_service.py
py_spring_admin/core/service/: auth_service.py  commons.py  errors.py  model_service.py  otp_service.py  smtp_service.py  template.py
py_spring_admin/dev/: test_tables_provider.py
py_spring_admin/dev/repository/: models.py
py_spring_admin/repository/: user_service.py
py_spring_modules/py_spring_admin/: provider.py  py_spring_admin.py
py_spring_modules/py_spring_admin/controller/: admin_main_controller.py  auth_controller.py  depends_utils.py  model_controller.py
py_spring_modules/py_spring_admin/controller/middleware/: auth_middleware.py  (+2 more)
py_spring_modules/py_spring_admin/repository/: commons.py  models.py  user_repository.py  user_service.py
py_spring_modules/py_spring_admin/service/: auth_service.py  model_service.py
pyspring_modules/py_spring_admin/: py_spring_admin.py
pyspring_modules/py_spring_admin/controller/: auth_controller.py
pyspring_modules/py_spring_admin/repository/: models.py  user_repository.py  user_service.py
pyspring_modules/py_spring_admin/service/: auth_service.py
(+3 files in other folders)
