[project]
name = "PySpring-Modules"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "William Chen", email = "ow6201231@gmail.com"},
]
dependencies = [
    "pyjwt>=2.9.0",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
