[project]
name = "PySpring-Admin"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "William Chen", email = "ow6201231@gmail.com"},
]
dependencies = [
    "pyjwt>=2.9.0",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "py-spring-core==0.0.4",
    "py-spring-model @ git+https://github.com/PythonSpring/pyspring-model.git@main",
    "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "py_spring_admin/__init__.py" }
distribution = true